--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,15 +2,18 @@ name: Build Windows EXE
 
 on:
   push:
-    branches: [ main ]
-  workflow_dispatch:
+    branches: [ main, master ]
+  pull_request:
+    branches: [ main, master ]
+  workflow_dispatch:  # 允许手动触发
 
 jobs:
-  build:
-    runs-on: windows-latest
+  build-windows-exe:
+    runs-on: windows-latest  # 使用 Windows 运行器
     
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v4
     
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -22,12 +25,20 @@ jobs:
         python -m pip install --upgrade pip
         pip install pandas openpyxl pyinstaller
     
-    - name: Build EXE
+    - name: Build EXE file
       run: |
         pyinstaller --onefile --console --name "Excel对比分析工具" excel_analyzer.py
+        dir dist\  # 列出生成的文件
     
-    - name: Upload artifact
-      uses: actions/upload-artifact@v3
+    - name: Upload EXE as artifact
+      uses: actions/upload-artifact@v4
       with:
-        name: Excel分析工具
+        name: Excel对比分析工具
         path: dist/Excel对比分析工具.exe
+        retention-days: 30
+
+    - name: Create release (optional)
+      if: startsWith(github.ref, 'refs/tags/')
+      uses: softprops/action-gh-release@v1
+      with:
+        files: dist/Excel对比分析工具.exe
