--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,12 @@
-name: Build and Release
+name: Build Windows EXE
 
 on:
   push:
-    tags: ['v*']
+    branches: [ main, master ]
   workflow_dispatch:
 
-permissions:
-  contents: write
-
 jobs:
-  build-release:
+  build-windows-exe:
     runs-on: windows-latest
     
     steps:
@@ -23,17 +20,16 @@ jobs:
     
     - name: Install dependencies
       run: |
+        python -m pip install --upgrade pip
         pip install pandas openpyxl pyinstaller
     
-    - name: Build EXE
+    - name: Build EXE file
       run: |
-        pyinstaller --onefile --console --name "ExcelAnalyzer" excel_analyzer.py
+        pyinstaller --onefile --console --name "ExcelComparator" excel_analyzer.py
     
-    - name: Create Release
-      uses: ncipollo/release-action@v1
+    - name: Upload EXE as artifact
+      uses: actions/upload-artifact@v4
       with:
-        tag: "v${{ github.run_number }}"
-        name: "Excel分析工具 v${{ github.run_number }}"
-        body: "Excel对比字段分析工具 Windows 版本"
-        artifacts: "dist/ExcelAnalyzer.exe"
-        token: ${{ secrets.GITHUB_TOKEN }}
+        name: ExcelComparator
+        path: dist/ExcelComparator.exe
+        retention-days: 30
